--- a/index.html
+++ b/index.html
@@ -22,201 +22,213 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-nav">
-        <a class="logo" href="./index.html">
-          Web<span class="header-logo-part">Studio</span></a
-        >
-        <ul class="header-nav-list">
-          <li class="header-nav-item">
-            <a class="header-nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-nav-item">
-            <a class="header-nav-link" href="">Portfolio</a>
-          </li>
-          <li class="header-nav-item">
-            <a class="header-nav-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="header-contacts">
-        <ul class="header-contacts-list">
-          <li class="header-contacts-item">
-            <a class="header-contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="header-contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="logo header-logo" href="./index.html">
+            Web<span class="header-logo-part">Studio</span></a
+          >
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">Portfolio</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-contacts">
+          <ul class="header-contacts-list">
+            <li class="header-contacts-item">
+              <a class="header-contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="header-contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--order service-->
       <section class="hero-section">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
       <!--benefits-->
       <section class="benefits-section">
-        <h2 hidden>Benefits</h2>
-        <ul class="benefits-list">
-          <li class="benefits-item">
-            <h3 class="benefits-item-title">Strategy</h3>
-            <p class="benefits-item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-item-title">Punctuality</h3>
-            <p class="benefits-item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-item-title">Diligence</h3>
-            <p class="benefits-item-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-item-title">Technologies</h3>
-            <p class="benefits-item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container benefits-container">
+          <h2 hidden>Benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Strategy</h3>
+              <p class="benefits-item-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Punctuality</h3>
+              <p class="benefits-item-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Diligence</h3>
+              <p class="benefits-item-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-item-title">Technologies</h3>
+              <p class="benefits-item-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--team cards-->
       <section class="team-section">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              src="./images/team-cards-section/team-card-1-mark-guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Mark Guerrero</h3>
-            <p class="team-title-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-cards-section/team-card-2-tom-ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Tom Ford</h3>
-            <p class="team-title-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-cards-section/team-card-3-camila-garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Camila Garcia</h3>
-            <p class="team-title-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-cards-section/team-card-4-daniel-wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-item-title">Daniel Wilson</h3>
-            <p class="team-title-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                src="./images/team-cards-section/team-card-1-mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item-title">Mark Guerrero</h3>
+              <p class="team-item-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-cards-section/team-card-2-tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item-title">Tom Ford</h3>
+              <p class="team-item-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-cards-section/team-card-3-camila-garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item-title">Camila Garcia</h3>
+              <p class="team-item-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/team-cards-section/team-card-4-daniel-wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-item-title">Daniel Wilson</h3>
+              <p class="team-item-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- portfolio -->
       <section class="portfolio-section">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="porftolio-list">
-          <li class="porftolio-item">
-            <img
-              src="./images/portfolio-section/banking-app.jpg"
-              alt="banking
-            app"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Banking App</h3>
-            <p class="portfolio-item-text">App</p>
-          </li>
-          <li class="porftolio-item">
-            <img
-              src="./images/portfolio-section/cashless-payment.jpg"
-              alt="cashless payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Cashless Payment</h3>
-            <p class="portfolio-item-text">Marketing</p>
-          </li>
-          <li class="porftolio-item">
-            <img
-              src="./images/portfolio-section/meditation-app.jpg"
-              alt="meditation app"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Meditation App</h3>
-            <p class="portfolio-item-text">App</p>
-          </li>
-          <li class="porftolio-item">
-            <img
-              src="./images/portfolio-section/taxi-service.jpg"
-              alt="taxi
-            service"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Taxi Service</h3>
-            <p class="portfolio-item-text">Marketing</p>
-          </li>
-          <li class="porftolio-item">
-            <img
-              src="./images/portfolio-section/screen-illustrations.jpg"
-              alt="screen illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Screen Illustrations</h3>
-            <p class="portfolio-item-text">Design</p>
-          </li>
-          <li class="porftolio-item">
-            <img
-              src="./images/portfolio-section/online-courses.jpg"
-              alt="online
-            courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-item-title">Online Courses</h3>
-            <p class="portfolio-item-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="porftolio-list">
+            <li class="porftolio-item">
+              <img
+                src="./images/portfolio-section/banking-app.jpg"
+                alt="banking
+              app"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Banking App</h3>
+              <p class="portfolio-item-text">App</p>
+            </li>
+            <li class="porftolio-item">
+              <img
+                src="./images/portfolio-section/cashless-payment.jpg"
+                alt="cashless payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Cashless Payment</h3>
+              <p class="portfolio-item-text">Marketing</p>
+            </li>
+            <li class="porftolio-item">
+              <img
+                src="./images/portfolio-section/meditation-app.jpg"
+                alt="meditation app"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Meditation App</h3>
+              <p class="portfolio-item-text">App</p>
+            </li>
+            <li class="porftolio-item">
+              <img
+                src="./images/portfolio-section/taxi-service.jpg"
+                alt="taxi
+              service"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Taxi Service</h3>
+              <p class="portfolio-item-text">Marketing</p>
+            </li>
+            <li class="porftolio-item">
+              <img
+                src="./images/portfolio-section/screen-illustrations.jpg"
+                alt="screen illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Screen Illustrations</h3>
+              <p class="portfolio-item-text">Design</p>
+            </li>
+            <li class="porftolio-item">
+              <img
+                src="./images/portfolio-section/online-courses.jpg"
+                alt="online
+              courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-item-title">Online Courses</h3>
+              <p class="portfolio-item-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="footer-logo-part">Studio</span></a
-      >
-      <p class="footer-slogan">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo footer-logo" href="./index.html"
+          >Web<span class="footer-logo-part">Studio</span></a
+        >
+        <p class="footer-slogan">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
