--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       </section>
       <!--benefits-->
       <section class="benefits-section">
-        <div class="container benefits-container">
-          <h2 hidden>Benefits</h2>
+        <div class="container">
+          <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="benefits-item-title">Strategy</h3>
@@ -111,8 +111,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-title">Mark Guerrero</h3>
-              <p class="team-item-text">Product Designer</p>
+              <div class="team-card">
+                <h3 class="team-item-title">Mark Guerrero</h3>
+                <p class="team-item-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -121,8 +123,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-title">Tom Ford</h3>
-              <p class="team-item-text">Frontend Developer</p>
+              <div class="team-card">
+                <h3 class="team-item-title">Tom Ford</h3>
+                <p class="team-item-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -131,8 +135,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-title">Camila Garcia</h3>
-              <p class="team-item-text">Marketing</p>
+              <div class="team-card">
+                <h3 class="team-item-title">Camila Garcia</h3>
+                <p class="team-item-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -141,8 +147,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-item-title">Daniel Wilson</h3>
-              <p class="team-item-text">UI Designer</p>
+              <div class="team-card">
+                <h3 class="team-item-title">Daniel Wilson</h3>
+                <p class="team-item-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -160,8 +168,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Banking App</h3>
-              <p class="portfolio-item-text">App</p>
+              <div class="portfolio-card">
+                <h3 class="portfolio-item-title">Banking App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
             </li>
             <li class="porftolio-item">
               <img
@@ -170,8 +180,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Cashless Payment</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-card">
+                <h3 class="portfolio-item-title">Cashless Payment</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
             <li class="porftolio-item">
               <img
@@ -180,8 +192,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Meditation App</h3>
-              <p class="portfolio-item-text">App</p>
+              <div class="portfolio-card">
+                <h3 class="portfolio-item-title">Meditation App</h3>
+                <p class="portfolio-item-text">App</p>
+              </div>
             </li>
             <li class="porftolio-item">
               <img
@@ -191,8 +205,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Taxi Service</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-card">
+                <h3 class="portfolio-item-title">Taxi Service</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
             <li class="porftolio-item">
               <img
@@ -201,8 +217,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Screen Illustrations</h3>
-              <p class="portfolio-item-text">Design</p>
+              <div class="portfolio-card">
+                <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                <p class="portfolio-item-text">Design</p>
+              </div>
             </li>
             <li class="porftolio-item">
               <img
@@ -212,8 +230,10 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-item-title">Online Courses</h3>
-              <p class="portfolio-item-text">Marketing</p>
+              <div class="portfolio-card">
+                <h3 class="portfolio-item-title">Online Courses</h3>
+                <p class="portfolio-item-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
